--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ROS Package"]
 	path = ROS Package
-	url = C:\\Users\\sami_\\Documents\\jamkit_robot_hand\\ROS Package
+	url = https://github.com/sam-eee/jamkit
